update: href to outside

--- a/home/index.html
+++ b/home/index.html
@@ -16,16 +16,32 @@
             <h2>BOYAINC</h2>
             <div class="d-flex ">
                 <div>
-                    <div class="button gitlab"><a href="http://192.168.0.10/" target="_blank">BOYA Gitlab</a></div>
-                    <div class="button gitlab"><a href="http://192.168.0.10/LT/V3Desktop" target="_blank">V3Desktop</a></div>
-                    <div class="button gitlab"><a href="http://192.168.0.10/LT/frontend" target="_blank">Frontend</a></div>
-                    <div class="button dinbendon"><a href="https://dinbendon.net/do/" target="_blank">DinBenDon</a></div>
+                    <a href="http://192.168.0.10/" target="_blank">
+                        <div class="button gitlab">BOYA Gitlab</div>
+                    </a>
+                    <a href="http://192.168.0.10/LT/V3Desktop" target="_blank">
+                        <div class="button gitlab">V3Desktop</div>
+                    </a>
+                    <a href="http://192.168.0.10/LT/frontend" target="_blank">
+                        <div class="button gitlab">Frontend</div>
+                    </a>
+                    <a href="https://dinbendon.net/do/" target="_blank">
+                        <div class="button dinbendon">DinBenDon</div>
+                    </a>
                 </div>
                 <div>
-                    <div class="button eip"><a href="http://eip.boyainc.com/tw/" target="_blank">EIP</a></div>
-                    <div class="button eip"><a href="http://jira.boyainc.com:8080/" target="_blank">JIRA</a></div>
-                    <div class="button api"><a href="http://api.zhfk30.com/pesTest.php" target="_blank">API decrypt</a></div>
-                    <div class="button api"><a href="http://192.168.0.24:8083/" target="_blank">Drone</a></div>
+                    <a href="http://eip.boyainc.com/tw/" target="_blank">
+                        <div class="button eip">EIP</div>
+                    </a>
+                    <a href="http://jira.boyainc.com:8080/" target="_blank">
+                        <div class="button eip">JIRA</div>
+                    </a>
+                    <a href="http://api.zhfk30.com/pesTest.php" target="_blank">
+                        <div class="button api">API decrypt</div>
+                    </a>
+                    <a href="http://192.168.0.24:8083/" target="_blank">
+                        <div class="button api">Drone</div>
+                    </a>
                 </div>
             </div>
         </div>
@@ -34,15 +50,28 @@
             <h2>FUN</h2>
             <div class="d-flex ">
                 <div>
-                    <div class="button errol"><a href="http://errol.tw/" target="_blank">Errol.tw</a></div>
-                    <div class="button ptt"><a href="https://iamchucky.github.io/PttChrome/" target="_blank">PTT</a></div>
-                    <div class="button api"><a href="https://medium.com/" target="_blank">Medium</a></div>
+                    <a href="http://errol.tw/" target="_blank">
+                        <div class="button errol">Errol.tw</div>
+                    </a>
+                    <a href="https://iamchucky.github.io/PttChrome/" target="_blank">
+                        <div class="button ptt">PTT</div>
+                    </a>
+                    <a href="https://medium.com/" target="_blank">
+                        <div class="button api">Medium</div>
+                    </a>
                 </div>
-                <div>
-                    <div class="button eip"><a href="https://www.facebook.com/" target="_blank">Facebook</a></div>
-                    <div class="button eip"><a href="https://www.zhihu.com/" target="_blank">ZhiHu </a></div>
-                    <div class="button youtube"><a href="https://www.youtube.com/" target="_blank">YouTube</a></div>
-                    <div class="button youtube"><a href="https://www.google.com/gmail/" target="_blank">Gmail</a></div>
+                <div><a href="https://www.facebook.com/" target="_blank">
+                        <div class="button eip">Facebook</div>
+                    </a>
+                    <a href="https://www.zhihu.com/" target="_blank">
+                        <div class="button eip">ZhiHu</div>
+                    </a>
+                    <a href="https://www.youtube.com/" target="_blank">
+                        <div class="button youtube">YouTube</div>
+                    </a>
+                    <a href="https://www.google.com/gmail/" target="_blank">
+                        <div class="button youtube">Gmail</div>
+                    </a>
                 </div>
             </div>
         </div>
