--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./static/index.css" />
+    <title>Errol.tw</title>
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./static/index.css">
-    <title>Errol Lin</title>
-</head>
-
-<body>
+  <body>
     <div id="wrapper">
-        <h1>Errol Lin</h1>
-        <h2>Code &amp; Photography</h2>
-        <p><a href="https://www.instagram.com/errol.tw" target="_blank">Instagram</a></p>
-        <p><a href="https://github.com/LJC0915" target="_blank">Github</a></p>
+      <h1>Errol Lin</h1>
+      <h2>Code &amp; Photography</h2>
+      <p><a href="https://www.instagram.com/errol.tw" target="_blank">Instagram</a></p>
+      <p><a href="https://github.com/LJC0915" target="_blank">Github</a></p>
     </div>
-</body>
-
+  </body>
 </html>
