--- a/home/index.html
+++ b/home/index.html
@@ -1,52 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="../static/home.css" />
+    <title>Errol.tw</title>
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../static/home.css">
-    <title>Home</title>
-</head>
-
-<body>
-    <div class="container">
-        <div class="wrapper">
-            <h1>WORK</h1>
-            <h2>BOYAINC</h2>
-            <div class="d-flex ">
-                <div>
-                    <div class="button gitlab"><a href="http://192.168.0.10/" target="_blank">BOYA Gitlab</a></div>
-                    <div class="button gitlab"><a href="http://192.168.0.10/LT/V3Desktop" target="_blank">V3Desktop</a></div>
-                    <div class="button gitlab"><a href="http://192.168.0.10/LT/frontend" target="_blank">Frontend</a></div>
-                    <div class="button dinbendon"><a href="https://dinbendon.net/do/" target="_blank">DinBenDon</a></div>
-                </div>
-                <div>
-                    <div class="button eip"><a href="http://eip.boyainc.com/tw/" target="_blank">EIP</a></div>
-                    <div class="button eip"><a href="http://jira.boyainc.com:8080/" target="_blank">JIRA</a></div>
-                    <div class="button api"><a href="http://api.zhfk30.com/pesTest.php" target="_blank">API decrypt</a></div>
-                    <div class="button api"><a href="http://192.168.0.24:8083/" target="_blank">Drone</a></div>
-                </div>
-            </div>
+  <body>
+    <div class="topbar">
+      <div class="datewrap">
+        <div><div class="day"></div></div>
+        <div class="col">
+          <div class="month"></div>
+          <div class="year"></div>
         </div>
-        <div class="wrapper">
-            <h1>Errol</h1>
-            <h2>FUN</h2>
-            <div class="d-flex ">
-                <div>
-                    <div class="button errol"><a href="http://errol.tw/" target="_blank">Errol.tw</a></div>
-                    <div class="button ptt"><a href="https://iamchucky.github.io/PttChrome/" target="_blank">PTT</a></div>
-                    <div class="button api"><a href="https://medium.com/" target="_blank">Medium</a></div>
-                </div>
-                <div>
-                    <div class="button eip"><a href="https://www.facebook.com/" target="_blank">Facebook</a></div>
-                    <div class="button eip"><a href="https://www.zhihu.com/" target="_blank">ZhiHu </a></div>
-                    <div class="button youtube"><a href="https://www.youtube.com/" target="_blank">YouTube</a></div>
-                    <div class="button youtube"><a href="https://www.google.com/gmail/" target="_blank">Gmail</a></div>
-                </div>
-            </div>
-        </div>
+      </div>
+      <div class="time"></div>
     </div>
-</body>
+    <div class="container">
+      <div class="wrapper">
+        <h1>WORK</h1>
+        <h2>BOYAINC</h2>
+        <div class="d-flex ">
+          <div>
+            <div class="button gitlab"><a href="http://192.168.0.10/" target="_blank">BOYA Gitlab</a></div>
+            <div class="button gitlab"><a href="http://192.168.0.10/LT/V3Desktop" target="_blank">V3Desktop</a></div>
+            <div class="button gitlab"><a href="http://192.168.0.10/LT/frontend" target="_blank">Frontend</a></div>
+            <div class="button dinbendon"><a href="https://dinbendon.net/do/" target="_blank">DinBenDon</a></div>
+          </div>
+          <div>
+            <div class="button eip"><a href="http://eip.boyainc.com/tw/" target="_blank">EIP</a></div>
+            <div class="button eip"><a href="http://jira.boyainc.com:8080/" target="_blank">JIRA</a></div>
+            <div class="button api"><a href="http://api.zhfk30.com/pesTest.php" target="_blank">API decrypt</a></div>
+            <div class="button api"><a href="http://192.168.0.24:8083/" target="_blank">Drone</a></div>
+          </div>
+        </div>
+      </div>
+      <div class="wrapper">
+        <h1>Errol</h1>
+        <h2>FUN</h2>
+        <div class="d-flex ">
+          <div>
+            <div class="button errol"><a href="http://errol.tw/" target="_blank">Errol.tw</a></div>
+            <div class="button ptt"><a href="https://iamchucky.github.io/PttChrome/" target="_blank">PTT</a></div>
+            <div class="button api"><a href="https://medium.com/" target="_blank">Medium</a></div>
+          </div>
+          <div>
+            <div class="button eip"><a href="https://www.facebook.com/" target="_blank">Facebook</a></div>
+            <div class="button eip"><a href="https://www.zhihu.com/" target="_blank">ZhiHu </a></div>
+            <div class="button youtube"><a href="https://www.youtube.com/" target="_blank">YouTube</a></div>
+            <div class="button youtube"><a href="https://www.google.com/gmail/" target="_blank">Gmail</a></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
+  <script>
+    const day = document.querySelector(".day");
+    const month = document.querySelector(".month");
+    const year = document.querySelector(".year");
+    const time = document.querySelector(".time");
 
+    time.innerHTML = new Date().toLocaleString("en-US", {hour: "numeric"});
+    function setDate() {
+      const now = new Date();
+      day.innerHTML = now.getDate();
+      month.innerHTML = now.toLocaleString("en-US", {month: "short"});
+      year.innerHTML = now.getFullYear();
+      time.innerHTML = `${now.getHours()} : ${now.getMinutes()}`;
+    }
+    setInterval(setDate, 1000);
+  </script>
 </html>
