--- a/home/index.html
+++ b/home/index.html
@@ -28,10 +28,10 @@
                     <a href="http://192.168.0.10/" target="_blank">
                         <div class="button gitlab">BOYA Gitlab</div>
                     </a>
-                    <a href="http://192.168.0.10/LT/V3Desktop" target="_blank">
+                    <a href="http://192.168.0.10/frontend/lottery-desktop-web" target="_blank">
                         <div class="button gitlab">V3Desktop</div>
                     </a>
-                    <a href="http://192.168.0.10/LT/frontend" target="_blank">
+                    <a href="http://192.168.0.10/frontend/common" target="_blank">
                         <div class="button gitlab">Frontend</div>
                     </a>
                     <a href="https://dinbendon.net/do/" target="_blank">
