--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     <div id="wrapper">
       <h1>Errol Lin</h1>
       <h2>Code &amp; Photography</h2>
-      <p><a href="https://www.instagram.com/errol.tw" target="_blank">Instagram</a></p>
-      <p><a href="https://github.com/LJC0915" target="_blank">Github</a></p>
+      <p>
+        <a href="https://www.instagram.com/errol.tw" target="_blank"
+          >Instagram</a
+        >
+      </p>
+      <!-- <p><a href="https://github.com/LJC0915" target="_blank">Github</a></p> -->
     </div>
   </body>
 </html>
