--- a/home/index.html
+++ b/home/index.html
@@ -34,8 +34,8 @@
                     <a href="http://192.168.0.10/frontend/common" target="_blank">
                         <div class="button gitlab">Frontend</div>
                     </a>
-                    <a href="https://dinbendon.net/do/" target="_blank">
-                        <div class="button dinbendon">DinBenDon</div>
+                    <a href="http://192.168.0.10/dashboard/merge_requests?state=opened&assignee_id=0" target="_blank">
+                        <div class="button gitlab">All MRs</div>
                     </a>
                 </div>
                 <div>
@@ -45,11 +45,11 @@
                     <a href="http://jira.boyainc.com:8080/" target="_blank">
                         <div class="button eip">JIRA</div>
                     </a>
-                    <a href="http://api.zhfk30.com/pesTest.php" target="_blank">
-                        <div class="button api">API decrypt</div>
-                    </a>
                     <a href="http://192.168.0.24:8083/" target="_blank">
                         <div class="button api">Drone</div>
+                    </a>
+                    <a href="https://dinbendon.net/do/" target="_blank">
+                        <div class="button dinbendon">DinBenDon</div>
                     </a>
                 </div>
             </div>
