--- a/index.html
+++ b/index.html
@@ -1,23 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./static/index.css" />
-    <title>Errol.tw</title>
-  </head>
+<!--
+	Identity by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 
-  <body>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Errol.tw</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="index/assets/css/main.css" />
+    <noscript><link rel="stylesheet" href="index/assets/css/noscript.css"/></noscript>
+  </head>
+  <body class="is-preload">
     <div id="wrapper">
-      <h1>Errol Lin</h1>
-      <h2>Code &amp; Photography</h2>
-      <p>
-        <a href="https://www.instagram.com/errol.tw" target="_blank"
-          >Instagram</a
-        >
-      </p>
-      <!-- <p><a href="https://github.com/LJC0915" target="_blank">Github</a></p> -->
+      <section id="main">
+        <header>
+          <span class="avatar"><img src="index/images/avatar.jpg" alt=""/></span>
+          <h1>Errol Lin</h1>
+          <p>Web Developer <br />X <br />Photographer</p>
+        </header>
+        <footer>
+          <ul class="icons">
+            <!-- <li><a target="_blank" href="#" class="fa-twitter">Twitter</a></li> -->
+            <li><a target="_blank" href="https://www.instagram.com/errollin92/" class="fa-instagram"></a></li>
+            <!-- <li><a target="_blank" href="#" class="fa-facebook">Facebook</a></li> -->
+          </ul>
+        </footer>
+      </section>
+      =
     </div>
+    <script>
+      if ("addEventListener" in window) {
+        window.addEventListener("load", function() {
+          document.body.className = document.body.className.replace(/\bis-preload\b/, "");
+        });
+        document.body.className += navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? " is-ie" : "";
+      }
+    </script>
   </body>
 </html>
