add download link

--- a/api_inspector/index.html
+++ b/api_inspector/index.html
@@ -40,7 +40,7 @@
             Design By Errol
           </p>
           <ul class="actions special">
-            <li><a id="downloadLink" href="#" class="button primary equalBtn">macOS</a></li>
+            <li><a id="downloadLink" href="./assets/inspector/Api-Inspector.crx" class="button primary equalBtn">macOS</a></li>
           </ul>
         </div>
         <!-- <a href="#one" class="more scrolly">Learn More</a> -->
@@ -219,7 +219,7 @@
       const downloadLink = document.querySelector("#downloadLink");
       if (os > 0) {
         downloadLink.textContent = "Windows";
-        downloadLink.href = "!!!!";
+        downloadLink.href = "./assets/inspector/Api-Inspector.zip";
       }
     </script>
     <script src="assets/js/jquery.min.js"></script>
