add: download icon and version

--- a/api_inspector/index.html
+++ b/api_inspector/index.html
@@ -37,10 +37,11 @@
         <div class="inner">
           <h2>Api Inspector</h2>
           <p>
+            2019_April v1 <br>
             Design By Errol
           </p>
           <ul class="actions special">
-            <li><a id="downloadLink" href="./assets/inspector/Api-Inspector.crx" class="button primary equalBtn">macOS</a></li>
+            <li><a id="downloadLink" href="./assets/inspector/Api-Inspector.crx" class="button primary icon fa-download">macOS</a></li>
           </ul>
         </div>
         <!-- <a href="#one" class="more scrolly">Learn More</a> -->
