fix: update to xteam

--- a/home/index.html
+++ b/home/index.html
@@ -20,69 +20,63 @@
       <div class="time"></div>
     </div>
     <div class="container">
-        <div class="wrapper">
-            <h1>WORK</h1>
-            <h2>BOYAINC</h2>
-            <div class="d-flex ">
-                <div>
-                    <a href="http://192.168.0.10/" target="_blank">
-                        <div class="button gitlab">BOYA Gitlab</div>
-                    </a>
-                    <a href="http://192.168.0.10/frontend/lottery-desktop-web" target="_blank">
-                        <div class="button gitlab">V3Desktop</div>
-                    </a>
-                    <a href="http://192.168.0.10/frontend/common" target="_blank">
-                        <div class="button gitlab">Frontend</div>
-                    </a>
-                    <a href="http://192.168.0.10/dashboard/merge_requests?state=opened&assignee_id=0" target="_blank">
-                        <div class="button gitlab">All MRs</div>
-                    </a>
-                </div>
-                <div>
-                    <a href="http://eip.boyainc.com/tw/" target="_blank">
-                        <div class="button eip">EIP</div>
-                    </a>
-                    <a href="http://jira.boyainc.com:8080/" target="_blank">
-                        <div class="button eip">JIRA</div>
-                    </a>
-                    <a href="http://192.168.0.24:8083/" target="_blank">
-                        <div class="button api">Drone</div>
-                    </a>
-                    <a href="https://dinbendon.net/do/" target="_blank">
-                        <div class="button dinbendon">DinBenDon</div>
-                    </a>
-                </div>
-            </div>
+      <div class="wrapper">
+        <h1>WORK</h1>
+        <h2>X Team Studio</h2>
+        <div class="d-flex ">
+          <div>
+            <a href="https://github.com/xteamstudio" target="_blank">
+              <div class="button api">Github</div>
+            </a>
+            <a href="https://github.com/xteamstudio/team-wiki" target="_blank">
+              <div class="button api">team-wiki</div>
+            </a>
+            <a href="https://dinbendon.net/do/" target="_blank">
+              <div class="button dinbendon">DinBenDon</div>
+            </a>
+          </div>
+          <div>
+            <a href="https://github.com/xteamstudio/noah-mobile" target="_blank">
+              <div class="button api">noah-mobile</div>
+            </a>
+            <a href="https://github.com/xteamstudio/noah-mobile/issues" target="_blank">
+              <div class="button api">noah-m issue</div>
+            </a>
+            <a href="https://github.com/xteamstudio/noah-mobile/pulls" target="_blank">
+              <div class="button api">noah-m pr</div>
+            </a>
+          </div>
         </div>
-        <div class="wrapper">
-            <h1>Errol</h1>
-            <h2>FUN</h2>
-            <div class="d-flex ">
-                <div>
-                    <a href="http://errol.tw/" target="_blank">
-                        <div class="button errol">Errol.tw</div>
-                    </a>
-                    <a href="https://iamchucky.github.io/PttChrome/" target="_blank">
-                        <div class="button ptt">PTT</div>
-                    </a>
-                    <a href="https://medium.com/" target="_blank">
-                        <div class="button api">Medium</div>
-                    </a>
-                </div>
-                <div><a href="https://www.facebook.com/" target="_blank">
-                        <div class="button eip">Facebook</div>
-                    </a>
-                    <a href="https://www.zhihu.com/" target="_blank">
-                        <div class="button eip">ZhiHu</div>
-                    </a>
-                    <a href="https://www.youtube.com/" target="_blank">
-                        <div class="button youtube">YouTube</div>
-                    </a>
-                    <a href="https://www.google.com/gmail/" target="_blank">
-                        <div class="button youtube">Gmail</div>
-                    </a>
-                </div>
-            </div>
+      </div>
+      <div class="wrapper">
+        <h1>Errol</h1>
+        <h2>FUN</h2>
+        <div class="d-flex ">
+          <div>
+            <a href="http://errol.tw/" target="_blank">
+              <div class="button errol">Errol.tw</div>
+            </a>
+            <a href="https://iamchucky.github.io/PttChrome/" target="_blank">
+              <div class="button ptt">PTT</div>
+            </a>
+            <a href="https://medium.com/" target="_blank">
+              <div class="button api">Medium</div>
+            </a>
+          </div>
+          <div>
+            <a href="https://www.facebook.com/" target="_blank">
+              <div class="button eip">Facebook</div>
+            </a>
+            <a href="https://www.zhihu.com/" target="_blank">
+              <div class="button eip">ZhiHu</div>
+            </a>
+            <a href="https://www.youtube.com/" target="_blank">
+              <div class="button youtube">YouTube</div>
+            </a>
+            <a href="https://www.google.com/gmail/" target="_blank">
+              <div class="button youtube">Gmail</div>
+            </a>
+          </div>
         </div>
       </div>
     </div>
