--- a/home/index.html
+++ b/home/index.html
@@ -36,14 +36,14 @@
             </a>
           </div>
           <div>
-            <a href="https://github.com/xteamstudio/noah-mobile" target="_blank">
-              <div class="button api">noah-mobile</div>
+            <a href="https://github.com/xteamstudio/xts-mobile" target="_blank">
+              <div class="button api">xts-mobile</div>
             </a>
-            <a href="https://github.com/xteamstudio/noah-mobile/issues" target="_blank">
-              <div class="button api">noah-m issue</div>
+            <a href="https://github.com/xteamstudio/xts-mobile/issues" target="_blank">
+              <div class="button api">xts-m issue</div>
             </a>
-            <a href="https://github.com/xteamstudio/noah-mobile/pulls" target="_blank">
-              <div class="button api">noah-m pr</div>
+            <a href="https://github.com/xteamstudio/xts-mobile/pulls" target="_blank">
+              <div class="button api">xts-m pr</div>
             </a>
           </div>
         </div>
