--- a/api_inspector/index.html
+++ b/api_inspector/index.html
@@ -37,7 +37,7 @@
         <div class="inner">
           <h2>Api Inspector</h2>
           <p>
-            2019_April v1 <br>
+            2019_May v1 <br>
             Design By Errol
           </p>
           <ul class="actions special">
