xts -> noah-admin

--- a/home/index.html
+++ b/home/index.html
@@ -39,14 +39,14 @@
             </a>
           </div>
           <div>
-            <a href="https://github.com/xteamstudio/xts-mobile" target="_blank">
-              <div class="button api">xts-mobile</div>
+            <a href="https://github.com/xteamstudio/noah-admin" target="_blank">
+              <div class="button api">noah-admin</div>
             </a>
-            <a href="https://github.com/xteamstudio/xts-mobile/issues" target="_blank">
-              <div class="button api">xts-m issue</div>
+            <a href="https://github.com/xteamstudio/noah-admin/issues" target="_blank">
+              <div class="button api">Issues</div>
             </a>
-            <a href="https://github.com/xteamstudio/xts-mobile/pulls" target="_blank">
-              <div class="button api">xts-m pr</div>
+            <a href="https://github.com/xteamstudio/noah-admin/pulls" target="_blank">
+              <div class="button api">Pull requests</div>
             </a>
           </div>
         </div>
