--- a/home/index.html
+++ b/home/index.html
@@ -47,6 +47,9 @@
             </a>
             <a href="https://github.com/xteamstudio/noah-admin/pulls" target="_blank">
               <div class="button api">Pull requests</div>
+              <a href="http://35.221.128.10/swagger-ui.html" target="_blank">
+                <div class="button dinbendon">Swagger - Dev</div>
+              </a>
             </a>
           </div>
         </div>
