--- a/home/index.html
+++ b/home/index.html
@@ -50,6 +50,9 @@
               <a href="http://35.221.128.10/swagger-ui.html" target="_blank">
                 <div class="button dinbendon">Swagger - Dev</div>
               </a>
+              <a href="http://35.189.183.121/swagger-ui.html#/Lotto_Report_API" target="_blank">
+                <div class="button dinbendon">Swagger - Lotto</div>
+              </a>
             </a>
           </div>
         </div>
