--- a/home/index.html
+++ b/home/index.html
@@ -48,10 +48,16 @@
             <a href="https://github.com/xteamstudio/noah-admin/pulls" target="_blank">
               <div class="button api">Pull requests</div>
               <a href="http://35.221.128.10/swagger-ui.html" target="_blank">
-                <div class="button dinbendon">Swagger - Dev</div>
+                <div class="button dinbendon">Swagger - Ark biz</div>
+              </a>
+              <a href="http://34.80.207.77/swagger-ui.html#" target="_blank">
+                <div class="button dinbendon">Swagger - Ark user</div>
               </a>
               <a href="http://35.189.183.121/swagger-ui.html#/Lotto_Report_API" target="_blank">
-                <div class="button dinbendon">Swagger - Lotto</div>
+                <div class="button dinbendon">Swagger - Lotto Report</div>
+              </a>
+              <a href="http://34.80.156.80/swagger-ui.html#/" target="_blank">
+                <div class="button dinbendon">Swagger - Lotto Api</div>
               </a>
             </a>
           </div>
