--- a/home/index.html
+++ b/home/index.html
@@ -32,9 +32,12 @@
               <div class="button api">team-wiki</div>
             </a>
             <a
-              href="https://github.com/pulls?q=is%3Aopen+is%3Apr+archived%3Afalse+user%3Axteamstudio"
+              href="https://www.xteamstudio.com/team-wiki/API_Platform/index.html#g=1&p=%E7%9B%AE%E9%8C%84"
               target="_blank"
             >
+              <div class="button api">team-doc</div>
+            </a>
+            <a href="https://github.com/pulls?q=is%3Aopen+is%3Apr+archived%3Afalse+user%3Axteamstudio" target="_blank">
               <div class="button api">Code-Review</div>
             </a>
             <a href="https://dinbendon.net/do/" target="_blank">
@@ -45,16 +48,10 @@
             <a href="https://github.com/xteamstudio/noah-admin" target="_blank">
               <div class="button api">noah-admin</div>
             </a>
-            <a
-              href="https://github.com/xteamstudio/noah-admin/issues"
-              target="_blank"
-            >
+            <a href="https://github.com/xteamstudio/noah-admin/issues" target="_blank">
               <div class="button api">Issues</div>
             </a>
-            <a
-              href="https://github.com/xteamstudio/noah-admin/pulls"
-              target="_blank"
-            >
+            <a href="https://github.com/xteamstudio/noah-admin/pulls" target="_blank">
               <div class="button api">Pull requests</div>
               <a href="http://35.221.128.10/swagger-ui.html" target="_blank">
                 <div class="button dinbendon">Swagger - Ark biz</div>
@@ -62,10 +59,7 @@
               <a href="http://34.80.207.77/swagger-ui.html#" target="_blank">
                 <div class="button dinbendon">Swagger - Ark user</div>
               </a>
-              <a
-                href="http://35.189.183.121/swagger-ui.html#/Lotto_Report_API"
-                target="_blank"
-              >
+              <a href="http://35.189.183.121/swagger-ui.html#/Lotto_Report_API" target="_blank">
                 <div class="button dinbendon">Swagger - Lotto Report</div>
               </a>
               <a href="http://34.80.156.80/swagger-ui.html#/" target="_blank">
@@ -111,11 +105,11 @@
     const year = document.querySelector(".year");
     const time = document.querySelector(".time");
 
-    time.innerHTML = new Date().toLocaleString("en-US", { hour: "numeric" });
+    time.innerHTML = new Date().toLocaleString("en-US", {hour: "numeric"});
     function setDate() {
       const now = new Date();
       day.innerHTML = now.getDate();
-      month.innerHTML = now.toLocaleString("en-US", { month: "short" });
+      month.innerHTML = now.toLocaleString("en-US", {month: "short"});
       year.innerHTML = now.getFullYear();
       time.innerHTML = `${now.getHours()} : ${now.getMinutes()}`;
     }
