--- a/home/index.html
+++ b/home/index.html
@@ -123,26 +123,29 @@
             </a>
           </div>
           <div>
-            <a href="https://github.com/xteamstudio/noah-admin" target="_blank">
-              <div class="button api">noah-admin</div>
-            </a>
             <a
-              href="https://github.com/xteamstudio/noah-admin/issues"
+              href="https://github.com/xteamstudio/admin-common"
               target="_blank"
             >
-              <div class="button api">noah-admin<br />Issues</div>
+              <div class="button api">admin-common</div>
             </a>
             <a
-              href="https://github.com/xteamstudio/noah-admin/pulls"
+              href="https://github.com/xteamstudio/admin-common/issues"
               target="_blank"
             >
-              <div class="button api">noah-admin<br />Pull requests</div>
+              <div class="button api">admin-common<br />Issues</div>
             </a>
             <a
-              href="https://github.com/xteamstudio/noah-admin/issues#zenhub"
+              href="https://github.com/xteamstudio/admin-common/pulls"
               target="_blank"
             >
-              <div class="button api">noah-admin<br />Zen Hub</div>
+              <div class="button api">admin-common<br />Pull requests</div>
+            </a>
+            <a
+              href="https://github.com/xteamstudio/admin-common/issues#zenhub"
+              target="_blank"
+            >
+              <div class="button api">admin-common<br />Zen Hub</div>
             </a>
           </div>
         </div>
