add Swagger  平台管控端

--- a/home/index.html
+++ b/home/index.html
@@ -69,6 +69,12 @@
                 Lotto Api
               </div>
             </a>
+            <a href="http://104.199.156.97/swagger-ui.html" target="_blank">
+              <div class="button dinbendon">
+                Swagger <br />
+                平台管控端
+              </div>
+            </a>
           </div>
         </div>
       </div>
