--- a/home/index.html
+++ b/home/index.html
@@ -69,7 +69,7 @@
                 Lotto Api
               </div>
             </a>
-            <a href="http://104.199.156.97/swagger-ui.html" target="_blank">
+            <a href="http://104.199.158.209/swagger-ui.html" target="_blank">
               <div class="button dinbendon">
                 Swagger <br />
                 平台管控端
@@ -83,6 +83,9 @@
         <h2>PROJECT</h2>
         <div class="d-flex ">
           <div>
+            <a href="http://35.227.201.216/" target="_blank">
+              <div class="button api dinbendon">管端 dev</div>
+            </a>
             <a href="https://github.com/xteamstudio/xts-admin" target="_blank">
               <div class="button api">xts-admin</div>
             </a>
