--- a/oort_helper/index.html
+++ b/oort_helper/index.html
@@ -5,21 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="icon" href="./favicon.ico" />
-    <title>oort-helper</title>
-    <link href="./css/app.7b4fe356.css" rel="preload" as="style" />
-    <link href="./js/app.8bc839e8.js" rel="preload" as="script" />
-    <link href="./js/chunk-vendors.add243fd.js" rel="preload" as="script" />
-    <link href="./css/app.7b4fe356.css" rel="stylesheet" />
+    <title>
+      oort-helper
+    </title>
+    <link href="./css/app.52ae8aa5.css" rel="preload" as="style" />
+    <link href="./js/app.8d738409.js" rel="preload" as="script" />
+    <link href="./js/chunk-vendors.b6b6e082.js" rel="preload" as="script" />
+    <link href="./css/app.52ae8aa5.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>
-      <strong
-        >We're sorry but oort-helper doesn't work properly without JavaScript
-        enabled. Please enable it to continue.
-      </strong>
+      <strong>
+        We're sorry but oort-helper doesn't work properly without JavaScript
+        enabled. Please enable it to continue.</strong
+      >
     </noscript>
     <div id="app"></div>
-    <script src="./js/chunk-vendors.add243fd.js"></script>
-    <script src="./js/app.8bc839e8.js"></script>
+    <script src="./js/chunk-vendors.b6b6e082.js"></script>
+    <script src="./js/app.8d738409.js"></script>
   </body>
 </html>
