--- a/oort_helper/index.html
+++ b/oort_helper/index.html
@@ -5,23 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="icon" href="./favicon.ico" />
-    <title>
-      oort-helper
-    </title>
-    <link href="./css/app.180f76d8.css" rel="preload" as="style" />
-    <link href="./js/app.4d0d37e6.js" rel="preload" as="script" />
-    <link href="./js/chunk-vendors.b6b6e082.js" rel="preload" as="script" />
-    <link href="./css/app.180f76d8.css" rel="stylesheet" />
+    <title>oort-helper</title>
+    <link href="./css/app.c1b196d8.css" rel="preload" as="style" />
+    <link href="./js/app.3e40594c.js" rel="preload" as="script" />
+    <link href="./js/chunk-vendors.d7ff8055.js" rel="preload" as="script" />
+    <link href="./css/app.c1b196d8.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>
-      <strong>
-        We're sorry but oort-helper doesn't work properly without JavaScript
-        enabled. Please enable it to continue.</strong
-      >
+      <strong
+        >We're sorry but oort-helper doesn't work properly without JavaScript
+        enabled. Please enable it to continue.
+      </strong>
     </noscript>
     <div id="app"></div>
-    <script src="./js/chunk-vendors.b6b6e082.js"></script>
-    <script src="./js/app.4d0d37e6.js"></script>
+    <script src="./js/chunk-vendors.d7ff8055.js"></script>
+    <script src="./js/app.3e40594c.js"></script>
   </body>
 </html>
